[gd_scene load_steps=12 format=3 uid="uid://b43gm6k5ytdp2"]

[ext_resource type="Texture2D" uid="uid://b0d0rnbtnr4wn" path="res://slay_the_wc/Assets/Art/map_test.jpg" id="1_j71dy"]
[ext_resource type="Script" uid="uid://bloufm6f2cfp0" path="res://slay_the_wc/Scenes/Map/Map.gd" id="1_svm44"]
[ext_resource type="Texture2D" uid="uid://c8rd5vmhhncme" path="res://slay_the_wc/Assets/Art/icon_battle_map.png" id="2_q6eef"]
[ext_resource type="Texture2D" uid="uid://bi265as0umern" path="res://slay_the_wc/Assets/Art/boss_fianl_icon.png" id="3_sppq5"]
[ext_resource type="Texture2D" uid="uid://d1gc0714x4vke" path="res://slay_the_wc/Assets/Art/line_between_step.png" id="4_svm44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_q6eef"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_oda81"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_sppq5"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_svm44"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_b5qyj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwur7"]

[node name="Map" type="Node2D"]
script = ExtResource("1_svm44")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(700, 421.49997)
scale = Vector2(1.1969178, 1.070153)
texture = ExtResource("1_j71dy")

[node name="Battle1" type="Button" parent="."]
offset_left = 509.0
offset_top = 652.0
offset_right = 546.0
offset_bottom = 694.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("2_q6eef")

[node name="Battle2" type="Button" parent="."]
offset_left = 172.0
offset_top = 469.0
offset_right = 209.0
offset_bottom = 511.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("2_q6eef")

[node name="BattleFinal" type="Button" parent="."]
offset_left = 709.0
offset_top = 305.0
offset_right = 1273.0
offset_bottom = 864.0
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("3_sppq5")

[node name="Battle3" type="Button" parent="."]
offset_left = 371.0
offset_top = 250.0
offset_right = 408.0
offset_bottom = 292.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("2_q6eef")

[node name="Battle4" type="Button" parent="."]
offset_left = 1083.0
offset_top = 308.0
offset_right = 1120.0
offset_bottom = 350.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("2_q6eef")

[node name="Battle5" type="Button" parent="."]
offset_left = 956.0
offset_top = 623.0
offset_right = 993.0
offset_bottom = 665.0
scale = Vector2(2, 2)
theme_override_colors/font_color = Color(0.8745098, 0.8745098, 0.8745098, 0)
theme_override_styles/normal = SubResource("StyleBoxEmpty_q6eef")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_oda81")
theme_override_styles/hover = SubResource("StyleBoxEmpty_sppq5")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_svm44")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_b5qyj")
theme_override_styles/focus = SubResource("StyleBoxEmpty_uwur7")
icon = ExtResource("2_q6eef")

[node name="Line1To2" type="Line2D" parent="."]
texture_repeat = 2
width = 6.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("4_svm44")
texture_mode = 1

[node name="Line2To3" type="Line2D" parent="."]
texture_repeat = 2
width = 6.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("4_svm44")
texture_mode = 1

[node name="Line3To4" type="Line2D" parent="."]
texture_repeat = 2
width = 6.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("4_svm44")
texture_mode = 1

[node name="Line4To5" type="Line2D" parent="."]
texture_repeat = 2
width = 6.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("4_svm44")
texture_mode = 1

[node name="Line5ToFinal" type="Line2D" parent="."]
texture_repeat = 2
width = 6.0
default_color = Color(0, 0, 0, 1)
texture = ExtResource("4_svm44")
texture_mode = 1

[connection signal="pressed" from="Battle1" to="." method="_on_battle_1_pressed"]
[connection signal="pressed" from="Battle2" to="." method="_on_battle_2_pressed"]
[connection signal="pressed" from="BattleFinal" to="." method="_on_battle_final_pressed"]
[connection signal="pressed" from="Battle3" to="." method="_on_battle_3_pressed"]
[connection signal="pressed" from="Battle4" to="." method="_on_battle_4_pressed"]
[connection signal="pressed" from="Battle5" to="." method="_on_battle_5_pressed"]
